# PCircos

./: .111.html.icloud  .Ufo_demo.html.icloud  .demo1.html.icloud  .demo_plot.html.icloud  .gitignore  Complex.py  Dockerfile  Dockerfile.dashapp  LICENSE  MANIFEST.in  PCircos-phylo.py  PCircos.py  README.md  __init__.py  dash_dict.py  dashapp.py  dashapp_functions.py  docker-compose.yml  experiment.py  fig.py  maths.py  nextstrain_zika_metadata.tsv  requirements.txt  setup.cfg  test.py  test.txt  test1.txt  tmp.txt
PCircos/: PCircos.py  __init__.py  colors.py  dash_dict.py  dashapp.py  fig.py  install.sh  vcfreader.py
PCircos/assets/: jquery-ui.css
PCircos/config/: __init__.py  default_params.json  json_config.py
PCircos/dash/: test.py
assets/: pcircos.css  pcircos.js
config/: Untitled.ipynb  __init__.py  coord_config.py  default_params.json  json_config.py
demo_data/: annotation.txt  chr_size.txt  connector.txt  connector_chr.txt  cytoband.txt  cytoband_chr.txt  cytoband_chr_infos.txt  cytoband_hg19_chr_infos.txt  cytoband_hg38_chr_infos.txt  dataframe.cytoband.json  dataframe.genes.json  demo_params.json  demo_params1.json  demo_params_dataframe.json  example.vcf.gz.export.json  example.vcf.gz.json  heatmap.txt  heatmap_chr.txt  highlight.txt  histogram_neg.txt  histogram_neg_chr.txt  histogram_pos.txt  histogram_pos_chr.txt  link_chr.txt  link_test.txt  morbid.txt  nextstrain_zika_timetree.nwk  nextstrain_zika_tree.nwk  options.category.demo_data.json  options.category.demo_data_full.json  options.cytoband.data.dataframe.json  options.cytoband.data.dataframe_file.json  options.cytoband.data.path.infos.json  options.cytoband.data.path.json  options.example.dataframe.json  options.example.exons.json  options.example.json  options.general.json  options.genes.data.dataframe.json  options.genes.data.dataframe_file.json  (+18 more)
demo_data/Ufo/: CG.txt  CG_demo.txt  CHG.txt  CHG_demo.txt  CHH_demo.txt  CNV.txt  CNV_log2.txt  DEG.txt  DEG_down.txt  DEG_down_demo.txt  DEG_up.txt  DEG_up_demo.txt  DEL.txt  DEX.txt  DEX_down.txt  DEX_up.txt  DSR_down.txt  DSR_up.txt  DTE.txt  DTE_down.txt  DTE_down_demo.txt  DTE_up.txt  DTE_up_demo.txt  INS.txt  INV.txt  TRA.txt  TRA_demo.txt  (+11 more)
docker/: Dockerfile
ignore/: test.py
temp/: color.txt  color_1.txt  random_rgb_pool.txt
tests/: example.vcf  test.vcf  test_config.json  test_copy_number.vcf  test_empty.vcf  test_gene_matcher.vcf  test_main.py  test_transloc.vcf
vcf2circos/: __init__.py  __main__.py  colors.py  datafactory.py  experiment.py  fig.py  install.sh  maths.py  parseargs.py  utils.py  vcf2circos.py  vcfreader.py
vcf2circos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+60 files in other folders)
