[metadata]
name = PCircos
version = attr: PCircos.__version__
description = Circos generation with Plotly from JSON or VCF file
long_description = file: README.md
long_description_content_type = text/markdown
author = Jin Cui, Antony Le Bechec
url = https://github.com/CJinny/PCircos

license_files = LICENSE
keywords = bioinformatics, Circos, VCF, Plotly
classifiers =
    Development Status :: 2 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU  Affero General Public License v3 (AGPL-3.0)

[options.package_data]
* = *.yaml, *.json


[options]
zip_safe = False
include_package_data = True
packages = PCircos
python_requires = >=3.6
install_requires =
    plotly
    colorlover
    dash==0.39.0
    dash-daq==0.1.0
    dash_colorscales
    IPython
    PyVCF3
    Bio
    kaleido
    numpy
    pandas
    colour
[options.extras_require]
dev =
    black
    pytest

[options.entry_points]
console_scripts =
    PCircos = PCircos.PCircos:main

# [zest.releaser]
# create-wheel = yes
# python-file-with-version = variantconvert/__init__.py
