[metadata]
name = vcf2circos
version = attr: vcf2circos.__version__
description = Circos generation with Plotly from JSON or VCF file
long_description = file: README.md
long_description_content_type = text/markdown
author = Antony Le Bechec, Jean-Baptiste Lamouche
url = https://github.com/bioinfo-chru-strasbourg/vcf2circos.git

license_files = LICENSE
keywords = bioinformatics, Circos, VCF, Plotly
classifiers =
    Development Status :: 2 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU  Affero General Public License v3 (AGPL-3.0)

[options]
zip_safe = False
include_package_data = True
packages = vcf2circos
python_requires = >=3.8
install_requires =
    plotly
    colorlover
    dash==0.39.0
    dash-daq==0.1.0
    dash_colorscales
    IPython
    PyVCF3 @ git+https://github.com/JbaptisteLam/PyVCF3.git
    tqdm
    numpy
    pandas
    colour
    webcolors
    pyfiglet
    scipy
    kaleido
[options.extras_require]
dev =
    black
    pytest

[options.entry_points]
console_scripts =
    vcf2circos = vcf2circos.__main__:main
[options.package_data]
* = *.yaml, *.json
[options.packages.find]
where = vcf2circos

[zest.releaser]
create-wheel = yes
python-file-with-version = vcf2circos/__init__.py
